<resources>
    <string name="app_name">CookBook</string>
    <string name="continue_">Continue</string>
    <string name="phone_number">Phone number</string>
    <string name="code">Enter code</string>
    <string name="cancel">Cancel</string>
    <string name="welcome" translatable="false">Welcome</string>
    <string name="to_your_very_own" translatable="false">to your very own</string>
    <string name="cookbook" translatable="false">Cookbook</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="recipe_date" translatable="false">12/12/12</string>
    <string name="added_on">Added on </string>
    <string name="by">By </string>
    <string name="owner_name">Owner McOwnerson</string>
    <string name="prep_time">Prep time: </string>
    <string name="minutes">minutes</string>
    <string name="difficulty">Difficulty:</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="ingredient_amount" translatable="false">500</string>
    <string name="ingredient_units_gr">gram</string>
    <string name="ingredient_item">All Purpose Flour</string>
    <string name="ingredients">Ingredients:</string>
    <string name="method">Method:</string>
    <string name="title">Title</string>
    <string name="add_a_recipe">Add a recipe!</string>
    <string name="add_first_ingredient">Add ingredient</string>
    <string name="add_another_ingredient">Add another ingredient</string>
    <string name="preview">Preview</string>
    <string name="submit">Submit</string>
    <string name="remove">remove</string>
    <string name="profile_page">Profile</string>
    <string name="num_recipes"># of recipes:</string>
    <string name="num_friends"># of friends:</string>
    <string name="number_30" translatable="false">30</string>
    <string name="what_your_name">What\'s your name?</string>
    <string name="welcome_subtitle">Tell us about yourself</string>
    <string name="no_recipes_yet">No recipes yet</string>
    <string name="change_your_username">Change your username?</string>
    <string name="no_friends_yet">No friends yet</string>
    <string name="add_an_ingredient">Add an ingredient</string>
    <string name="the_ingredient">The ingredient:</string>
    <string name="what_are_you_adding">What are you adding?</string>
    <string name="enter_amount">Enter amount:</string>
    <string name="how_much_of_it">How much of it?</string>
    <string name="measuring_unit">Measuring unit:</string>
    <string name="how_do_you_count_it">How do you measure it?</string>
    <string name="sign_out">Sign out</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="you_have_k_pending_recipes">You have K pending recipes</string>
    <string name="you_have">You have</string>
    <string name="pending_recipes">pending recipes</string>
    <string name="share_recipe">Share recipe with</string>
    <string name="pending_friends">pending friends</string>
    <string name="friend_requests">Friend requests</string>
    <string name="friendslist">Friendslist</string>
    <string name="no_pending_recipes">No pending recipes</string>
    <string name="no_friend_requests">No friend requests</string>
    <string name="logging_out">Logging out</string>
    <string name="friend_request_send">Request sent.</string>
    <string name="recipe_added">Recipe added</string>
    <string name="friend_added">Friend added</string>
    <string name="recipe_shared">Recipe shared</string>
    <string name="user_not_in_database">User not in database</string>
    <string name="recipe_ignored">Recipe ignored</string>
    <string name="not_implemented">Not implemented yet.</string>
    <string name="time_out_try_again">Timed out.Try again</string>
    <string name="verification_failed">\"Verification Failed: \"</string>
    <string name="signed_in_successfully">Signed in successfully.</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="request_removed">Request removed</string>
    <string name="add_a_friend">Add a friend</string>
    <string name="search_contacts">Search contacts</string>
    <string name="search_for_number">Search for number</string>
    <string name="add_contacts">Add contacts</string>
    <string name="prep_time_minutes">Prep time(minutes):</string>
    <string name="your_cookbook">Your cookbook</string>
    <string name="welcome_">Welcome</string>
    <string name="upload_failed">Uploading image failed</string>
    <string name="upload_success">Image uploaded successfully.</string>
    <string name="uploading">Uploading...</string>
    <string name="enter_code">Please enter a code</string>
    <string name="enter_phone_number">Please enter a phone number</string>
    <string name="warn_no_title">Recipe must at least have a title</string>
    <string name="hello_world">Hello world</string>
    <string name="_15_34" translatable="false">15:34</string>
    <string name="seen">seen</string>
    <string name="send">Send</string>
    <string name="send_a_message">Send a message</string>
    <string name="what_is_it_called">What is it called?</string>
    <string name="how_do_you_make_it">How do you make it?</string>
    <string name="cant_add_self">You can\'t befriend yourself</string>
    <string name="already_friend">User is already a friend</string>
    <string name="already_pending">User is pending</string>
    <string name="no_name">You can\'t be nameless</string>


</resources>