<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddIngredientActivity">

  <TextView
      android:id="@+id/add_ingredient_TXT_title"

      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="20dp"

      android:text="@string/add_an_ingredient"
      android:textSize="45sp"
    />

  <TextView
      android:id="@+id/add_ingredient_TXT_ingredient"

      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/add_ingredient_TXT_title"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="30dp"

      android:text="@string/the_ingredient"
      android:textSize="30sp"
    />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/add_ingredient_LAY_ingredient"

      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/add_ingredient_TXT_ingredient"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="10dp"
      >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/add_ingredient_EDT_ingredient"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/soft_grey"

        android:ems="15"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:hint="@string/what_are_you_adding"

        />
  </com.google.android.material.textfield.TextInputLayout>

  <TextView
      android:id="@+id/add_ingredient_TXT_amount"

      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/add_ingredient_LAY_ingredient"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="30dp"

      android:text="@string/enter_amount"
      android:textSize="30sp"
    />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/add_ingredient_LAY_amount"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/add_ingredient_TXT_amount"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="10dp"
    >
  <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/add_ingredient_EDT_amount"

      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@color/soft_grey"

      android:ems="15"
      android:hint="@string/how_much_of_it"
      android:imeOptions="actionNext"
      android:inputType="numberDecimal"
      />
</com.google.android.material.textfield.TextInputLayout>

  <TextView
      android:id="@+id/add_ingredient_TXT_units"

      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/add_ingredient_LAY_amount"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="30dp"

      android:text="@string/measuring_unit"
      android:textSize="30sp"
      />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/add_ingredient_LAY_units"

      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/add_ingredient_TXT_units"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="10dp"
      >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/add_ingredient_EDT_units"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/soft_grey"

        android:ems="15"
        android:hint="@string/how_do_you_count_it"
        android:imeOptions="actionDone"
        android:inputType="text"
        />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.button.MaterialButton
      android:id="@+id/add_ingredient_BTN_cancel"

      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignParentStart="true"
      android:layout_margin="50dp"

      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      app:cornerRadius="10dp"
      app:strokeColor="@color/black"
      app:strokeWidth="2dp"
      android:textColor="@color/black"
      android:textAllCaps="false"
      android:backgroundTint="@color/teal_200"
      android:text="@string/cancel"
    />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/add_ingredient_BTN_submit"

      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignParentEnd="true"
      android:layout_margin="50dp"

      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      app:cornerRadius="10dp"
      app:strokeColor="@color/black"
      app:strokeWidth="2dp"
      android:textColor="@color/black"
      android:textAllCaps="false"
      android:backgroundTint="@color/teal_200"
      android:text="@string/submit"
      />

  </RelativeLayout>