<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:id="@+id/ingredient_IMG_check"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/checkbox_inactive"
        />
    <TextView
        android:id="@+id/ingredient_TXT_amount"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"

        android:text="@string/ingredient_amount"
        android:textStyle="bold"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/ingredient_TXT_units"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"

        android:text="@string/ingredient_units_gr"
        android:textStyle="bold"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/ingredient_TXT_item"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"

        android:text="@string/ingredient_item"
        android:textSize="15sp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/ingredient_BTN_remove"

        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:cornerRadius="10dp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:backgroundTint="@color/teal_200"

        android:text="@string/remove"

        />

</LinearLayout>