<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="40dp"
    android:elevation="20dp"
    app:cardElevation="20dp"
    android:layout_margin="12dp"
    >

    <RelativeLayout
        android:id="@+id/listRecipe_LAY_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:id="@+id/listRecipe_TXT_title"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"

            android:text="@string/recipe_title"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/listRecipe_TXT_added_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/listRecipe_TXT_title"
            android:layout_marginEnd="5dp"

            android:text="@string/added_on"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/listRecipe_TXT_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/listRecipe_TXT_title"
            android:layout_toEndOf="@id/listRecipe_TXT_added_on"

            android:text="@string/recipe_date"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/listRecipe_TXT_owned_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/listRecipe_TXT_date"
            android:layout_marginEnd="5dp"

            android:text="@string/by"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/listRecipe_TXT_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/listRecipe_TXT_date"
            android:layout_toEndOf="@id/listRecipe_TXT_owned_by"

            android:text="@string/owner_name"
            android:textSize="15sp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/listRecipe_IMG_image"

            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_below="@id/listRecipe_TXT_owner"
            android:layout_centerHorizontal="true"

            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            android:src="@drawable/ic_loading"
            />

        <TextView
            android:id="@+id/listRecipe_TXT_prepTime"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listRecipe_IMG_image"
            android:layout_alignStart="@id/listRecipe_TXT_owned_by"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"

            android:text="@string/prep_time"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/listRecipe_TXT_time"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listRecipe_IMG_image"
            android:layout_toEndOf="@id/listRecipe_TXT_prepTime"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"

            android:text="@string/number_30"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/listRecipe_TXT_minutes"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listRecipe_IMG_image"
            android:layout_toEndOf="@id/listRecipe_TXT_time"
            android:layout_marginTop="10dp"

            android:text="@string/minutes"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/listRecipe_TXT_difficulty"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listRecipe_TXT_prepTime"
            android:layout_alignStart="@id/listRecipe_TXT_prepTime"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"

            android:text="@string/difficulty"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listRecipe_TXT_prepTime"
            android:layout_toEndOf="@id/listRecipe_TXT_difficulty"
            android:layoutDirection="ltr"
            >

            <ImageView
                android:id="@+id/listRecipe_IMG_star1"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:src="@drawable/ic_full_star" />

            <ImageView
                android:id="@+id/listRecipe_IMG_star2"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:src="@drawable/ic_full_star"

                />

            <ImageView
                android:id="@+id/listRecipe_IMG_star3"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:src="@drawable/ic_full_star"

                />

            <ImageView
                android:id="@+id/listRecipe_IMG_star4"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:src="@drawable/ic_empty_star"

                />

            <ImageView
                android:id="@+id/listRecipe_IMG_star5"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:src="@drawable/ic_empty_star"

                />
        </LinearLayout>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>